# velro-backend

./: .coveragerc  .dockerignore  .env.development.secure  .env.example  .env.production.hardened  .env.production.secure  .env.staging.secure  .gitignore  BACKEND_MASTER_HISTORY_AND_DECISIONS.md  Dockerfile  FRONTEND_URL_FIX_SUMMARY.md  MIDDLEWARE_OPTIMIZATION_REPORT.md  README.md  config.py  config_service_account.py  curl_endpoint_tester.sh  database.py  database.py.backup  database_diagnostic_fal.py  debug_auth_timeout.py  diagnostic_deep_dive.py  fix_rls_policies.sql  health_check_service.py  main.py  main.py.backup.emergency  nixpacks.toml  production-correct-model-test.js  pyproject.toml  pytest.ini  railway.toml  requirements-loadtest.txt  requirements-test.txt  requirements.txt  start.sh  test_env_template.env
api/: collaboration.py  teams.py
archive/: production-final-test.js
baseline_app/: main.py
caching/: __init__.py  adaptive_ttl_manager.py  cache_key_manager.py  cache_optimization_implementation.py  enhanced_cache_warming_strategies.py  intelligent_cache_warming_service.py  multi_layer_cache.py  multi_layer_cache_manager.py  optimized_cache_manager.py  redis_cache.py
config/: __init__.py  load_test_scenarios.yaml  settings.py
diffs/: auth_handler_hardening.patch
docs/: ARCHITECTURE.md  ASYNC_FILE_PROCESSING_API.md  AUTHENTICATION_API_DOCUMENTATION.md  AUTHENTICATION_SYSTEM_ARCHITECTURE.md  AUTH_PERFORMANCE_SUMMARY.md  COMPREHENSIVE_PERFORMANCE_ARCHITECTURE.md  CORS_AND_ERRORS.md  CSRF_FRONTEND_INTEGRATION.md  DATABASE_OPTIMIZATION_COMPLETE_GUIDE.md  FINAL_IMPLEMENTATION_VALIDATION_REPORT.md  FRONTEND_PERFORMANCE_ARCHITECTURE.md  INFRASTRUCTURE_OPTIMIZATION.md  MIDDLEWARE_REFACTOR_PLAN.md  MULTI_LAYER_CACHE_ARCHITECTURE.md  OPERATIONAL_RUNBOOKS.md  OVERNIGHT_REPAIR_REPORT.md  PERFORMANCE_IMPLEMENTATION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  SECURITY_DEPLOYMENT_GUIDE.md  SECURITY_MONITORING_SYSTEM.md  VELRO_PERFORMANCE_OPTIMIZATION_STRATEGY.md  db_sync_minimal_rls.sql  deployment-verification.md  kong-scope-proof.md  retirement-plan.md  runtime-config-map.md
legacy-reports/: ASYNC_DATABASE_OPERATIONS_SUMMARY.md  AUTHENTICATION_FIX_COMPLETION_REPORT.md  AUTHENTICATION_FIX_REPORT.md  COMPREHENSIVE_FIX_IMPLEMENTATION_GUIDE.md  CRITICAL_FIX_STRATEGY_AUG_10_2025.md  E2E_TEST_REPORT.md  E2E_TEST_RESULTS_AUG_10_2025.md  E2E_TEST_SUMMARY_REPORT.md  EXECUTIVE_SUMMARY_E2E_VALIDATION.md  FINAL_COMPREHENSIVE_E2E_RESULTS.md  FINAL_DEPLOYMENT_VALIDATION_REPORT.md  FINAL_PERFORMANCE_IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_COMPLETE_AUG_10_2025.md  INCIDENT_REPORT_MODULE_ERROR_FIX.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION_REPORT.md  PHASE_3_AUTHORIZATION_IMPLEMENTATION_REPORT.md  RATE_LIMITER_TIMEOUT_FIX_REPORT.md  README.md
legacy-scripts/: AUTHENTICATION_JWT_FIX_CRITICAL.py  auth_connection_diagnosis.py  auth_test_comprehensive_report.py  check_users.py  comprehensive_e2e_report.py  cors_test_with_mock_backend.py  debug_auth_context.py  debug_generation_query_issue.py  debug_jwt_verification.py  final_e2e_test_attempt.py  final_production_validation.py  final_production_validation_with_correct_backend.py  find_cola_fal_generations.py  monitor_deployment.py  production_validation_comprehensive.py  railway_deployment_investigation.py  validate_railway_deployment.py  verify_migration_status.py
models/: credit.py  (+12 more)
(+520 files in other folders)
